V2 Galería Actualizada y otros Detalles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <li class="nav-item"><a href="#aboutme" class="nav-link" id="Navs">About Me</a></li>
                 <li class="nav-item"><a href="#academics" class="nav-link" id="Navs">Academics</a></li>
                 <li class="nav-item"><a href="#work" class="nav-link" id="Navs">Work Experience</a></li>
-                <li class="nav-item"><a href="#" class="nav-link" id="Navs">Acting</a></li>
+                <li class="nav-item"><a href="#icon-grid" class="nav-link" id="Navs">Skills</a></li>
+                <li class="nav-item"><a href="#carousel" class="nav-link" id="Navs">Acting</a></li>
                 <li class="nav-item"><a href="#" class="nav-link" id="Navs">Contact</a></li>
               </ul>
             </header>
@@ -145,59 +146,33 @@
         
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
               <div class="col d-flex align-items-start">
-                <i class="bi bi-chat-right-quote"></i>
+                <i class="bi flex-shrink-0 me-3 bi-chat-right-quote" id="icons"></i>
                 <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
+                  <h3 class="fw-bold mb-0 fs-4 pb-2" id="SkillsTitles">Languages</h3>
+                  <h7 class="pt-4 mt-4">Spanish - Native</h7>
+                  <h7>English - C2</h7>
+                  <p>French - A2</p>
                 </div>
               </div>
               <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
+                <i class="bi flex-shrink-0 me-3 bi-code" id="icons"></i>
                 <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
+                  <h3 class="fw-bold mb-0 fs-4 pb-2" id="SkillsTitles">Programming</h3>
+                  <p>Python, C, C#, Java, HTML, CSS </p>
                 </div>
               </div>
               <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
+                <i class="bi flex-shrink-0 me-3 bi-laptop" id="icons"></i>
                 <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
+                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Software</h3>
+                  <p>Inventor, MatLab, LabChart, Microsoft Suite, Google Workspace, iMovie</p>
                 </div>
               </div>
               <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
+                <i class="bi flex-shrink-0 me-3 bi-person-arms-up" id="icons"></i>
                 <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
-                <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#toggles2"></use></svg>
-                <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#geo-fill"></use></svg>
-                <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#tools"></use></svg>
-                <div>
-                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Featured title</h3>
-                  <p>Paragraph of text beneath the heading to explain the heading.</p>
+                  <h3 class="fw-bold mb-0 fs-4" id="SkillsTitles">Communication</h3>
+                  <p>Acting, Public Speaking, Storytelling</p>
                 </div>
               </div>
             </div>
@@ -207,33 +182,114 @@
         <section id="carousel">
             <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div class="d-flex justify-content-center">
-                        <img src="Elements/Kids.JPG" class="d-block w-50" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-item active">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Kids.JPG" class="d-block w-50" alt="KidsenAccionCampaign">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>"Kids en Acción" Discovery Kids Campaign</h5>
+                                <p>Campaign to promote a healthy lifestyle for children.</p>
+                            </div>
                         </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <div class="d-flex justify-content-center">
-                        <img src="Elements/Guarida.JPG" class="d-block w-50" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Guarida.JPG" class="d-block w-50" alt="LaGuaridaSecreta">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>"La Guarida Secreta" by Discovery Kids</h5>
+                                <p>Miniseries filmed in Argentina and played in Latin America.</p>
+                            </div>
                         </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <div class="d-flex justify-content-center">
-                        <img src="Elements/Arrancame.jpg" class="d-block w-50" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Arrancame.jpg" class="d-block w-50" alt="ArrancameLaVida">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">"Arráncame la Vida" Movie</h5>
+                                <p class="text-body-emphasis">With Daniel Giménez Cacho and Ana Claudia Talancón.</p>
+                            </div>
                         </div>
                     </div>
-                  </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Premiere.JPG" class="d-block w-50" alt="5DiasSinNora">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">Premiere "5 Días sin Nora" Movie</h5>
+                                <p> With movie cast and crew.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Ánimo Juventud-1.jpg" class="d-block w-50" alt="AnimoJuventud">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">"Animo Juventud!" Movie</h5>
+                                <p> With director and cast.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/5Dias.jpg" class="d-block w-50" alt="5DiasSinNora">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">"5 Días sin Nora" Movie</h5>
+                                <p> With Fernando Luján.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Arte.png" class="d-block w-50" alt="Arte al Rescate">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">"Arte al Rescate!" Once TV</h5>
+                                <p>Arts series for kids.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Bus.jpg" class="d-block w-50" alt="BusCommercial">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">Commercials and Campaigns</h5>
+                                <p>Over 50 different campaigns including short films, commercials, runways, and more.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Lafourcade.jpg" class="d-block w-50" alt="NataliaLafourcadeandPizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">La Guarida Secreta and Natalia Lafourcade</h5>
+                                <p>Of course I had to be dressed as a pizza</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/Astro.jpg" class="d-block w-50" alt="Astronauts">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">La Guarida Secreta Astronauts</h5>
+                                <p>Pretty much on brand for me even now tbh</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/pink.jpg" class="d-block w-50" alt="SceneFuneral">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
+                                <p>Pink really makes you stand out in a funeral scene</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                            <img src="Elements/AnaClaudia.jpg" class="d-block w-50" alt="AnaClaudia">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
+                                <p>With the beautiful and kind Ana Clauda Talancón</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
