--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <li class="nav-item"><a href="#aboutme" class="nav-link" id="Navs">About Me</a></li>
                 <li class="nav-item"><a href="#academics" class="nav-link" id="Navs">Academics</a></li>
                 <li class="nav-item"><a href="#work" class="nav-link" id="Navs">Work Experience</a></li>
-                <li class="nav-item"><a href="#icon-grid" class="nav-link" id="Navs">Skills</a></li>
-                <li class="nav-item"><a href="#carousel" class="nav-link" id="Navs">Acting</a></li>
-                <li class="nav-item"><a href="#" class="nav-link" id="Navs">Contact</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link" id="Navs">Skills</a></li>
+                <li class="nav-item"><a href="#acting" class="nav-link" id="Navs">Acting</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link" id="Navs">Contact</a></li>
               </ul>
             </header>
           </div>
@@ -140,10 +140,11 @@
               </div>
         </section>
 
+
         <!--Skills-->
-        <div class="container px-4 py-5" id="icon-grid">
+        <section id="skills">
+          <div class="container px-4 py-5" id="icon-grid">
             <h2 class="pb-2 border-bottom" id="Nombre">Skills</h2>
-        
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
               <div class="col d-flex align-items-start">
                 <i class="bi flex-shrink-0 me-3 bi-chat-right-quote" id="icons"></i>
@@ -177,129 +178,183 @@
               </div>
             </div>
           </div>
+        </section>
 
-
-        <section id="carousel">
-            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Kids.JPG" class="d-block w-50" alt="KidsenAccionCampaign">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>"Kids en Acción" Discovery Kids Campaign</h5>
-                                <p>Campaign to promote a healthy lifestyle for children.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Guarida.JPG" class="d-block w-50" alt="LaGuaridaSecreta">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>"La Guarida Secreta" by Discovery Kids</h5>
-                                <p>Miniseries filmed in Argentina and played in Latin America.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Arrancame.jpg" class="d-block w-50" alt="ArrancameLaVida">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">"Arráncame la Vida" Movie</h5>
-                                <p class="text-body-emphasis">With Daniel Giménez Cacho and Ana Claudia Talancón.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Premiere.JPG" class="d-block w-50" alt="5DiasSinNora">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">Premiere "5 Días sin Nora" Movie</h5>
-                                <p> With movie cast and crew.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Ánimo Juventud-1.jpg" class="d-block w-50" alt="AnimoJuventud">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">"Animo Juventud!" Movie</h5>
-                                <p> With director and cast.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/5Dias.jpg" class="d-block w-50" alt="5DiasSinNora">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">"5 Días sin Nora" Movie</h5>
-                                <p> With Fernando Luján.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Arte.png" class="d-block w-50" alt="Arte al Rescate">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">"Arte al Rescate!" Once TV</h5>
-                                <p>Arts series for kids.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Bus.jpg" class="d-block w-50" alt="BusCommercial">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">Commercials and Campaigns</h5>
-                                <p>Over 50 different campaigns including short films, commercials, runways, and more.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Lafourcade.jpg" class="d-block w-50" alt="NataliaLafourcadeandPizza">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">La Guarida Secreta and Natalia Lafourcade</h5>
-                                <p>Of course I had to be dressed as a pizza</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/Astro.jpg" class="d-block w-50" alt="Astronauts">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">La Guarida Secreta Astronauts</h5>
-                                <p>Pretty much on brand for me even now tbh</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/pink.jpg" class="d-block w-50" alt="SceneFuneral">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
-                                <p>Pink really makes you stand out in a funeral scene</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex justify-content-center">
-                            <img src="Elements/AnaClaudia.jpg" class="d-block w-50" alt="AnaClaudia">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
-                                <p>With the beautiful and kind Ana Clauda Talancón</p>
-                            </div>
-                        </div>
-                    </div>
+        <!--Galeria-->
+        <section id="acting">
+          <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Kids.JPG" class="d-block w-50" alt="KidsenAccionCampaign">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>"Kids en Acción" Discovery Kids Campaign</h5>
+                    <p>Campaign to promote a healthy lifestyle for children.</p>
+                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
               </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Guarida.JPG" class="d-block w-50" alt="LaGuaridaSecreta">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>"La Guarida Secreta" by Discovery Kids</h5>
+                    <p>Miniseries filmed in Argentina and played in Latin America.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Arrancame.jpg" class="d-block w-50" alt="ArrancameLaVida">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"Arráncame la Vida" Movie</h5>
+                    <p class="text-body-emphasis">With Daniel Giménez Cacho and Ana Claudia Talancón.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Premiere.JPG" class="d-block w-50" alt="5DiasSinNora">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">Premiere "5 Días sin Nora" Movie</h5>
+                    <p> With movie cast and crew.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Ánimo Juventud-1.jpg" class="d-block w-50" alt="AnimoJuventud">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"Animo Juventud!" Movie</h5>
+                    <p> With director and cast.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Ariel.png" class="d-block w-50" alt="Arieles">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">Ariel Awards with "5 Días sin Nora"</h5>
+                    <p> With producer Laura Imperiale</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Arte.png" class="d-block w-50" alt="Arte al Rescate">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"Arte al Rescate!" Once TV</h5>
+                    <p>Arts series for kids.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Bus.jpg" class="d-block w-50" alt="BusCommercial">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">Commercials and Campaigns</h5>
+                    <p>Over 50 different campaigns including short films, commercials, runways, and more.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Lafourcade.jpg" class="d-block w-50" alt="NataliaLafourcadeandPizza">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">La Guarida Secreta and Natalia Lafourcade</h5>
+                    <p>Of course I had to be dressed as a pizza</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/5Dias.jpg" class="d-block w-50" alt="5DiasSinNora">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"5 Días sin Nora" Movie</h5>
+                    <p> With Fernando Luján.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Doki.jpg" class="d-block w-50" alt="Doki">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">Kids en Acción Campaign with Doki</h5>
+                    <p>Discovery Kids Mascot and Icon "Sentado debajo de un mango"</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Astro.jpg" class="d-block w-50" alt="Astronauts">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">La Guarida Secreta Astronauts</h5>
+                    <p>Pretty much on brand for me even now tbh</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/pink.jpg" class="d-block w-50" alt="SceneFuneral">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
+                    <p>Pink really makes you stand out in a funeral scene</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/Kleenex.jpg" class="d-block w-50" alt="KleenexCommercial">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">Kleenex Commercial "Atrapa Estornudos"</h5>
+                    <p>Sneeze Catcher shenanigans in Argentina</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/BtsGuarida.jpg" class="d-block w-50" alt="Set Reality">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"La Guarida Secreta" Filming</h5>
+                    <p>What a filming set looks like</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/AnaClaudia.jpg" class="d-block w-50" alt="AnaClaudia">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
+                    <p>With the beautiful and kind Ana Clauda Talancón</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </section>
+
+        <section id="contact">
+          <div class="p-5 text-center rounded-3">
+            <i class="bi bi-envelope-at-fill" id="linkedin"></i>
+            <h1 class="text-body-primary" id="Degree">Contact</h1>
+            <p class="col-lg-8 mx-auto fs-5" id="Nombre">
+              Send me an email to talk about any projects or opportunities!
+            </p>
+            <div class="d-inline-flex">
+              <a href="mailto:arantzamorenocalva@gmail.com">
+                <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button" id="boton">
+                  Email
+                </button>
+              </a>
+            </div>
+          </div>
         </section>
 
 
