--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Bootstrap Icons-->
     <link rel = "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="shortcut icon" href="Elements/logo.png" type="image/x-icon">
     <title>Arantza Moreno Calva</title>
 </head>
 <body>
@@ -298,6 +299,15 @@
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-body-primary">"Arrancame la Vida" behind the scenes</h5>
                     <p>Pink really makes you stand out in a funeral scene</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                  <img src="Elements/FullGuarida.jpg" class="d-block w-50" alt="GuaridaFullCast">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-body-primary">"La Guarida Secreta"</h5>
+                    <p>Full length episode cast</p>
                   </div>
                 </div>
               </div>
