--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="shortcut icon" href="Elements/logo.png" type="image/x-icon">
     <title>Arantza Moreno Calva</title>
 </head>
+
 <body>
     <header>
         <div>
@@ -43,7 +44,8 @@
             <div class="row mt-4 p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3">
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-5 fw-bold lh-2 text-body-emphasis"><a id="Degree">Biomedical Engineer</a></h1>
-                <h2 class="display-6 fw-semibold lh-2 text-body-emphasis"><a id="Nombre">Arantza Moreno Calva</a></h2>
+                <!--Llamada a script de Java-->
+                <h2 id="app"></h2>
                 <p class="lead">Forward-thinking Biomedical Engineer with a fervent interest in wearable technology, IoT, signal processing, materials sciences, neuroengineering, and business. With a global perspective cultivated through academic and work experiences in the USA, Ireland, Argentina, and Mexico, I bring a unique blend of cultural diversity, creativity, and innovative thinking. </p>
                 <a class="bi flex-shrink-0 me-3" id="linkedin" href="https://www.linkedin.com/in/arantza-moreno-calva" target="_blank" role="button"><i class="bi bi-linkedin"></i></a>
                 <a class="bi flex-shrink-0 me-3" id="linkedin" href="https://www.imdb.com/name/nm2839230/" target="_blank" role="button"><i class="bi bi-camera-reels-fill"></i></a>
@@ -388,9 +390,13 @@
     </footer>
 
 
-
-
+    <!--Script Typewriter-->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <!--Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <!--Script JavaScript-->
+    <script src="main.js"></script>
+
+
+  </body>
 </html>
